--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -3,9 +3,15 @@
     display: flex;
 }
  
+.justify-content-center {
+    justify-content: center;
+   }
+
+.justify-content-end {
+    justify-content: flex-end
+   }
 
 .align-item {
 
     align-items: center;
 }
-
