--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -5,11 +5,17 @@
         }
     
 
+
     nav > a {
     text-decoration: none;
     color: rgb(72, 72, 72);
     font-weight: bold;
     text-align: right;
+    }
+
+    nav {
+
+        position: relative; left: 70rem;
     }
     
 
@@ -18,25 +24,21 @@
     width: 20em;
     }
     
-
-    nav {
-    position: relative;
-    left: 59vw;
-    }
-
     form {
     margin-left: 0.1rem;
     }
 
     select {
     border: none;
-    color: rgb(72, 72, 72);
-    font-weight: bold;
     }
 
 
+
    hr {
-    position: relative; bottom:0.3em;
+    position: relative; bottom:0.4em;
     border-color: rgb(240, 240, 240);
     
    }
+
+   
+    
