--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -22,3 +22,51 @@
    color: rgb(72, 72, 72);
 }
 
+.sectionsize {
+
+    font-size: 0.9rem;
+    color: rgb(72, 72, 72);
+    font-weight: bold;
+}
+
+#position-section {
+    position: relative; top: 0.4rem;
+}
+
+input:hover::placeholder {
+
+    color: red;
+}
+
+.margin-input {
+    margin-left: 1em;
+}
+.unset-div {
+    display: unset;
+    
+}
+
+
+.hr1 {
+    position: relative; bottom:0.4em;
+    border-color: rgb(240, 240, 240);
+    
+   }
+
+   .hr2 {
+    position: relative; top:1.1rem;
+    border-color: rgb(240, 240, 240);
+   }
+     
+   #justify-img-center {
+    display: flex;
+    justify-content: center;
+    position: relative; top: 2.8rem;
+   }
+
+.h1 {
+   padding: 5rem;
+   margin-left: 8rem;
+   margin-top: 1rem;
+    
+}
