--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -66,7 +66,23 @@ input:hover::placeholder {
 
 .h1 {
    padding: 5rem;
-   margin-left: 8rem;
+   margin-left: 8.8rem;
    margin-top: 1rem;
     
 }
+
+.available-now {
+    font-weight: bold;
+    text-decoration: none;
+    margin-left: 2rem;
+    border: 0.5rem solid; color: rgb(179, 14, 14);
+    background-color: red;
+    border-radius: 0.8rem;
+    color: white;
+    padding: 1rem;
+    font-size: 1.1rem;
+    width: 10vw;
+    text-align: center;
+
+}
+
