--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Open+Sans:wght@300", sans-serif;
    }
     
 
@@ -15,7 +19,7 @@
 
     nav {
 
-        position: relative; left: 70rem;
+        position: relative; left: 68rem;
     }
     
 
