--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -19,13 +19,13 @@
 
 .form-style {
    font-weight: bold;
-   color: rgb(72, 72, 72);
+   color: rgb(77, 76, 76);
 }
 
 .sectionsize {
 
     font-size: 0.9rem;
-    color: rgb(72, 72, 72);
+    color: rgb(77, 76, 76);
     font-weight: bold;
 }
 
@@ -49,13 +49,20 @@ input:hover::placeholder {
 
 .hr1 {
     position: relative; bottom:0.4em;
-    border-color: rgb(240, 240, 240);
+    border-color: rgb(245, 245, 245);
     
    }
 
    .hr2 {
     position: relative; top:1.1rem;
-    border-color: rgb(240, 240, 240);
+    border-color: rgb(245, 245, 245);
+   }
+
+   .hr3 {
+    width: 1470px;
+    position: relative; left: 13.5rem;
+    border-color: rgb(245, 245, 245);
+
    }
      
    #justify-img-center {
@@ -68,21 +75,50 @@ input:hover::placeholder {
    padding: 5rem;
    margin-left: 8.8rem;
    margin-top: 1rem;
+   color: rgb(77, 76, 76);
     
+}
+
+.p1 {
+    padding: 5rem;
+    margin-left: 8.8rem;
+    margin-top: 1rem;
+    color: rgb(77, 76, 76);
+    font-size: 2rem;
+    font-weight: bold;
+
 }
 
 .available-now {
     font-weight: bold;
     text-decoration: none;
     margin-left: 2rem;
-    border: 0.5rem solid; color: rgb(179, 14, 14);
-    background-color: red;
+    border: 0.5rem solid; color: rgb(199, 12, 13);
+    background-color: rgb(199, 12, 13);
     border-radius: 0.8rem;
     color: white;
     padding: 1rem;
     font-size: 1.1rem;
     width: 10vw;
-    text-align: center;
+   text-align: center;
 
 }
 
+.box-model {
+
+    border: 0.1rem solid;
+    color: rgb(223, 219, 219);
+    border-radius: 0.3rem;
+}
+
+.figcaption {
+    font-weight: normal;
+    font-size: 1rem;
+    margin-left: 0.5em;
+    margin-top: 0.2rem;
+   }
+
+
+   #p-red {
+    color: rgb(199, 12, 13); 
+   }
