--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -31,6 +31,7 @@
 
 #position-section {
     position: relative; top: 0.4rem;
+    margin-bottom: 1.1rem;
 }
 
 input:hover::placeholder {
@@ -51,11 +52,6 @@ input:hover::placeholder {
     position: relative; bottom:0.4em;
     border-color: rgb(245, 245, 245);
     
-   }
-
-   .hr2 {
-    position: relative; top:1.1rem;
-    border-color: rgb(245, 245, 245);
    }
 
    .hr3 {
@@ -89,6 +85,13 @@ input:hover::placeholder {
 
 }
 
+.bg-color {
+
+   background: linear-gradient(rgba(69,55,34,1) 0%, rgb(255, 254, 253) 50%, rgb(253, 253, 253) 100%);
+   border-color: rgb(255, 255, 255);
+   margin-top: 1rem;
+}
+
 .available-now {
     font-weight: bold;
     text-decoration: none;
@@ -100,7 +103,7 @@ input:hover::placeholder {
     padding: 1rem;
     font-size: 1.1rem;
     width: 10vw;
-   text-align: center;
+    text-align: center;
 
 }
 
@@ -121,4 +124,8 @@ input:hover::placeholder {
 
    #p-red {
     color: rgb(199, 12, 13); 
+   }
+
+   .bg-color {
+    background-color: linear-gradient(rgb(69,55,39), rgb(white));
    }
