--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -39,23 +39,23 @@
    div > img {
     border-radius: 0.3rem;
    }
-   
+
 
    figure a {
     text-decoration: none;
     color: rgb(77, 76, 76);
     font-weight: bold;
     font-size: 1.1rem;
-    padding: 1rem;
-
+   
    }
-   figure > div {
+   
+   figure div {
     margin-left: 2rem;
    }
 
    figcaption {
    margin-left: 1em;
-   line-height: 3rem;
+   line-height: 1.5rem;
 
    }
 
