--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
     font-family: "Open+Sans:wght@300", sans-serif;
    }
-    
+
 
 
     nav > a {
@@ -20,14 +20,15 @@
     .nav {
 
         position: relative; left: 68rem;
+
     }
-    
+
 
     input {
     border: 0rem;
     width: 20em;
     }
-    
+
     form {
     margin-left: 0.1rem;
     }
@@ -46,22 +47,39 @@
     color: rgb(77, 76, 76);
     font-weight: bold;
     font-size: 1.1rem;
-   
+
    }
-   
+
+   figure {
+
+    position: relative; bottom: 5rem;
+   }
+
+
    figure div {
-    margin-left: 2rem;
+    margin-left: 1rem;
    }
 
    figcaption {
    margin-left: 1em;
-   line-height: 1.5rem;
+   line-height: 1.6rem;
 
    }
 
-   
-   div > p {
-    margin-left: 1rem;
-   }
+  figure p {
+    border-left: 0.15rem solid red;
+    font-weight: initial;
+    font-size: 15px;
+    position: relative; left: 1.2rem; top: 2.5rem;
 
-  
+  }
+
+  span {
+    margin-left: 0.3rem;
+  }
+
+  div a > span {
+   margin-right: 0.5rem;               /*Red Available Now margin*/
+
+  }
+
