--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -1,28 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 
-
-* {
+* {                                                                       /*Initial format*/
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Open+Sans:wght@300", sans-serif;
    }
 
-
-
-    nav > a {
-    text-decoration: none;
-    color: rgb(77, 76, 76);
-    font-weight: bold;
-
-    }
-
-    .nav {
-
-        position: relative; left: 68rem;
-
-    }
-
+    input:hover::placeholder {
+    color: red;
+   }
 
     input {
     border: 0rem;
@@ -39,25 +26,26 @@
 
    div > img {
     border-radius: 0.3rem;
-   }
+    }
 
 
    figure a {
     text-decoration: none;
     color: rgb(77, 76, 76);
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1rem;
 
    }
 
    figure {
-
     position: relative; bottom: 5rem;
-   }
+
+  }
 
 
    figure div {
     margin-left: 1rem;
+
    }
 
    figcaption {
@@ -79,7 +67,12 @@
   }
 
   div a > span {
-   margin-right: 0.5rem;               /*Red Available Now margin*/
+   margin-right: 0.5rem;               /*Red Available-Now margin-right*/
 
   }
 
+  /* img navbar resizing
+  img[src$="png"] {
+     width: 16rem;
+     height: 9rem;
+  }     */
