--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -16,7 +16,7 @@
 }
 
 .nav a {
-    position: relative; left: 68rem;
+    position: relative; left: 80rem;
     text-decoration: none;
     font-weight: bold;
     color: rgb(77, 76, 76);
@@ -45,20 +45,20 @@
     margin-left: 1em;
 }
 
-                                                       /*Orizzontal Lines*/
+
 
 .hr1, .hr2, .hr3 {
     border-color: rgb(250, 249, 249, 0.2);
 }
 
 .hr1 {
-    position: relative; bottom:0.3em;
+    position: relative; bottom:0.3em;                          /*Orizzontal Lines*/
 
    }
 
 .hr2 {
     width: 1470px;
-    position: relative; left: 13.5rem;
+    position: relative; left: 20.5rem;
     position: relative; bottom: 2rem;
 
    }
@@ -83,7 +83,7 @@
 
 .p1 {
     padding: 5rem;
-    margin-left: 8.8rem;
+    margin-left: 14.5rem;
     color: rgb(77, 76, 76);
     font-size: 2rem;
     font-weight: bold;
@@ -99,7 +99,7 @@
 .available-now {
     font-weight: bold;
     text-decoration: none;
-    margin-left: 2rem;
+    margin-left: 8rem;
     background-color: rgb(233, 13, 13);
     border-radius: 0.3rem;
     padding: 1rem;
@@ -142,7 +142,3 @@ a.available-now:hover {
 div a > span {
     color: white;
 }
-
-
-
-
