--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -24,16 +24,6 @@
     border: none;
     }
 
-   div > img {
-    border-radius: 0.3rem;
-    }
-
-    img[src*="teen"]  {
-
-    position: relative; left: 19.5rem;
-
-    }
-
     a ~ p {
 
       font-size: 13px;
@@ -56,14 +46,9 @@
 
    }
 
-   figure {
-    position: relative; bottom: 5rem;
-
-  }
-
-
    figure div {
     margin-left: 1rem;
+    margin-top: 2rem;
 
    }
 
@@ -92,14 +77,9 @@
   }
 
   span {
-    margin-left: 1.5rem;
+    margin-left: 0.2rem;
   }
 
-  div a > span {
-   margin-right: 0.5rem;
-   position: relative; right:0.6rem;               /*Red Available-Now margin-right*/
-
-  }
 
   /* img navbar resizing
      img[src$="png"] {
@@ -107,8 +87,9 @@
      height: 9rem;
   }     */
 
-main > div h1 {
-   position: relative; left: 6rem;                 /*Position MONSTER HUNTER RISE + SUNBREAK h1*/
+  picture > div > img {
+  border-radius: 0.5rem;
+  margin: 1.2rem 5rem;
 }
 
 
