--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -1,15 +1,14 @@
-
 .d-flex {
     display: flex;
 }
 
 .justify-content-center {
     justify-content: center;
-   }
+}
 
-.jce{
+.jce {
     justify-content: flex-end;
-   }
+}
 
 .align-item {
     align-items: center;
@@ -24,12 +23,13 @@
 }
 
 .form-style {
-   font-weight: bold;
-   color: rgb(77, 76, 76);
+    font-weight: bold;
+    color: rgb(77, 76, 76);
 }
 
 #position-section {
-    position: relative; top: 0.4rem;
+    position: relative;
+    top: 0.4rem;
     margin-bottom: 1.1rem;
 }
 
@@ -43,29 +43,34 @@
     margin-left: 1em;
 }
 
-.hr1, .hr2, .hr3 {
+.hr1,
+.hr2,
+.hr3 {
     border-color: rgb(250, 249, 249, 0.2);
 }
 
 .hr1 {
-    position: relative; bottom:0.3em;                          /*Orizzontal Lines*/
+    position: relative;
+    bottom: 0.3em;
+    /*Orizzontal Lines*/
 
-   }
+}
 
 .hr2 {
     width: 1470px;
 
-   }
+}
+
 
 .justify-img-center {
     display: flex;
     justify-content: center;
 
-   }
+}
 
 .h1 {
 
-   color: rgb(77, 76, 76);
+    color: rgb(77, 76, 76);
 
 }
 
@@ -78,8 +83,8 @@
 }
 
 .bg-color {
-    background: linear-gradient(rgba(76,28,36,1) 0%, rgb(255, 255, 255) 50%, rgb(255, 255, 255) 100%);
- }
+    background: linear-gradient(rgba(76, 28, 36, 1) 0%, rgb(255, 255, 255) 30%, rgb(255, 255, 255) 100%);
+}
 
 
 .available-now {
@@ -90,6 +95,14 @@
     font-size: 1rem;
     height: 2.5em;
     width: 8rem;
+
+}
+
+.available-now:hover {
+    transition: all 300ms ease-out;
+    background-color: #a01a1a;
+    width: 9.2rem;
+    height: 3.3rem;
 }
 
 .available-now-href {
@@ -106,13 +119,15 @@
 
 }
 
-.figcaption {                                   /*Space figcaption*/
+.figcaption {
+    /*Space figcaption*/
     font-weight: normal;
     font-size: 1rem;
     margin-top: 0.2rem;
-    position: relative; right: 2.8rem;
+    position: relative;
+    right: 2.8rem;
     margin-top: 2.7rem;
-   }
+}
 
 .box-model {
     border: 0.065rem solid;
@@ -122,12 +137,22 @@
 
 }
 
+.box-model:hover {
+
+    transition: 450ms ease-in-out;
+    position: relative; bottom: 30px;
+}
+
 .nav-margin-bottom {
     margin-bottom: 6rem;
-  }
+}
+
+.margin-bottom {
+    margin-bottom: 70px;
+}
 
 
-div a > span {
+div a>span {
     color: white;
 }
 
@@ -149,16 +174,17 @@ div a > span {
 
 
 @media (min-width: 1920px) {
+    .img-position {
+
+        width: 96%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
+
 .img-position {
-
-width: 96%;
-margin-left: auto;
-margin-right: auto;
-}
-
-}
-
-.img-position {                  /*ALIGNMENT ITEMS TO MAIN IMG*/
+    /*ALIGNMENT ITEMS TO MAIN IMG*/
 
     max-width: 91rem;
 
@@ -167,43 +193,47 @@ margin-right: auto;
 .p-no-dec {
     text-decoration: none;
 }
-   .nav-bar {
+
+.nav-bar {
     display: flex;
     justify-content: flex-end;
     margin-left: auto;
     margin-right: auto;
     width: 70%;
     gap: 1.5rem
-   }
-    ;
+}
+
+;
 
 .form-style {
-font-weight: bold;
-   color: rgb(72, 72, 72);
+    font-weight: bold;
+    color: rgb(72, 72, 72);
 }
 
 /* Characters Class*/
-.characters-container{
+.characters-container {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
 }
 
-.characters-container h3{
+.characters-container h3 {
     color: #484848;
     font-size: 21px;
     font-weight: 700;
     margin: 20px 0 60px 0;
 }
 
-.characters-img{
+.characters-img {
     width: 274px;
     height: 274px;
     cursor: pointer;
 }
 
-.characters-img:hover{
+.characters-img:hover {
     transform: scale(1.15);
     transition: transform 200ms ease-in-out;
 }
+
+
 
