--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -102,7 +102,7 @@
   color: #484848;
   font-size: 28px;
   font-weight: 700;
-  margin-top: 60px;
+  margin-top: 50px;
 }
 
 #main-articles{
@@ -192,6 +192,7 @@
   display: inline-block;
   padding: 10px 20px;
   background-color: #ff0000;
+  border-radius: 0.4rem;
   color: #fff;
   font-size: 18px;
   font-weight: 600;
@@ -251,3 +252,5 @@
   border-radius: 10px;
   overflow: hidden;
 }
+
+
