--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -83,7 +83,7 @@
 }
 
 .bg-color {
-    background: linear-gradient(rgba(76, 28, 36, 1) 0%, rgb(255, 255, 255) 20%, rgb(255, 255, 255) 100%);
+    background: linear-gradient(rgba(76, 28, 36, 1) 0%, rgb(255, 255, 255) 18%, rgb(255, 255, 255) 100%);
 }
 
 
@@ -147,6 +147,10 @@
     margin-bottom: 6rem;
 }
 
+nav > a:hover {
+    color: red;
+}
+
 .margin-bottom {
     margin-bottom: 70px;
 }
@@ -161,6 +165,7 @@ div a>span {
     font-size: small;
 
 }
+
 
 .d-grid {
     display: grid;
@@ -183,6 +188,58 @@ div a>span {
 
 }
 
+@media (min-width: 1920px) {
+    .img-position {
+
+        width: 96%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
+
+@media screen and (min-width: 605px) {
+    .img-position {
+
+        width: 95.5%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
+
+
+@media screen and (min-width: 850px) {
+    .img-position {
+
+        width: 94%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
+
+@media screen and (max-width: 1525px) {
+    .img-position {
+
+        width: 94%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
+
+
+@media screen and (min-width: 300px) and (max-width: 800px) {
+    .nav-bar {
+
+        gap: 0rem;
+
+    }
+
+
+    }
+
 .img-position {
     /*ALIGNMENT ITEMS TO MAIN IMG*/
 
@@ -197,10 +254,14 @@ div a>span {
 .nav-bar {
     display: flex;
     justify-content: flex-end;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    gap: 1.5rem
+    gap: 1.5rem;
+    margin-right: 15px;
+}
+
+.prova {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .form-style {
