--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -258,13 +258,12 @@
   background-color: #E60012;
   padding: 36px 16px;
   max-width: 90rem;
-
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 1.75rem;
 }
+
 
 #social {
   display: flex;
@@ -273,15 +272,39 @@
   gap: 2rem;
 }
 
+
+@media screen and (min-width: 1200px) {
+  #first-row-footer {
+    max-width: 100%;
+  }
+
+}
+
+
+
+
 #nintendo-footer-logo{
   width: 195px;
   height: 50px;
 }
 
+@media (max-width: 767px) {
+  #first-row-footer{
+    flex-direction: row;
+    justify-content: space-around;
+    max-width: 120%;
+  }
+
+}
+
+
 @media (min-width: 768px) {
   #first-row-footer{
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin-left: -12rem;
+    margin-right: -15rem;
+    max-width: 130vw;
   }
 
   #social {
@@ -295,9 +318,9 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   padding: 36px;
-  justify-content: space-between;
   gap: 2rem;
 }
+
 
 @media (min-width: 768px) {
   #second-row-footer {
