--- a/CSS/classi.css
+++ b/CSS/classi.css
@@ -27,11 +27,6 @@
     color: rgb(77, 76, 76);
 }
 
-#position-section {
-    position: relative;
-    top: 0.4rem;
-    margin-bottom: 1.1rem;
-}
 
 .section-size {
     font-size: 0.9rem;
@@ -65,6 +60,7 @@
 .justify-img-center {
     display: flex;
     justify-content: center;
+
 
 }
 
@@ -262,6 +258,7 @@ div a>span {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-right: 30px;
 }
 
 .hyper-align {
