--- a/CSS/stili.css
+++ b/CSS/stili.css
@@ -424,3 +424,19 @@
   height: 36px;
   margin-right: 10px;
 }
+h4{
+
+  
+  margin-left: 20px;
+  padding-top: 80px;
+  font-family:sans-serif;
+  font-size:medium;
+  font-weight:bolder;
+  color: rgb(52, 52, 52);
+  
+  
+  
+}
+
+
+
